[gd_scene load_steps=9 format=2]

[ext_resource path="res://entities/cardsystem/scripts/Card.gd" type="Script" id=1]
[ext_resource path="res://ASSETS/UI/card_blank1.png" type="Texture" id=2]
[ext_resource path="res://fonts/Apollo.tres" type="DynamicFont" id=3]

[sub_resource type="Shader" id=5]
code = "shader_type canvas_item;

void fragment() {
	vec4 color = texture(TEXTURE, UV);
	if (color.a == 0.){
		COLOR = vec4(0., 0., 0.,0.);
	}
	else {
		COLOR = vec4(1., 1., 1., mod(cos(TIME/2.)+UV.x+UV.y,1.0)/2.);
	}
}"

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="DynamicFontData" id=2]
font_path = "res://fonts/Apollo.ttf"

[sub_resource type="DynamicFont" id=3]
size = 75
use_mipmaps = true
use_filter = true
font_data = SubResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 79
font_data = SubResource( 2 )

[node name="Card" type="Node2D"]
script = ExtResource( 1 )

[node name="Glow" type="Sprite" parent="."]
material = SubResource( 6 )
scale = Vector2( 0.26, 0.26 )
texture = ExtResource( 2 )

[node name="Background" type="Sprite" parent="."]
scale = Vector2( 0.244186, 0.244186 )
texture = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="Background"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -774.0
margin_top = -1080.0

[node name="HBoxContainer" type="HBoxContainer" parent="Background/VBoxContainer"]
margin_right = 774.0
margin_bottom = 52.0
alignment = 1

[node name="SPLabel" type="Label" parent="Background/VBoxContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_left = 385.0
margin_right = 385.0
margin_bottom = 52.0
custom_fonts/font = ExtResource( 3 )
align = 1
valign = 1

[node name="TopicIcon" type="TextureRect" parent="Background/VBoxContainer/HBoxContainer"]
margin_left = 389.0
margin_right = 389.0
margin_bottom = 52.0

[node name="Illustration" type="TextureRect" parent="Background/VBoxContainer"]
margin_top = 56.0
margin_right = 774.0
margin_bottom = 523.0
size_flags_vertical = 3

[node name="QuipLabel" type="Label" parent="Background/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 527.0
margin_right = 774.0
margin_bottom = 608.0
custom_fonts/font = SubResource( 3 )
text = "test"
align = 1
valign = 1
autowrap = true

[node name="DescriptionLabel" type="Label" parent="Background/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
self_modulate = Color( 0, 0, 0, 1 )
margin_top = 803.0
margin_right = 774.0
margin_bottom = 888.0
size_flags_vertical = 6
custom_fonts/font = SubResource( 4 )
align = 1
valign = 1
autowrap = true

[node name="SelectBox" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -139.0
margin_right = 80.0
margin_bottom = 250.0
color = Color( 0.52549, 0.0627451, 0.0627451, 0 )

[connection signal="gui_input" from="SelectBox" to="." method="_on_SelectBox_gui_input"]
[connection signal="mouse_entered" from="SelectBox" to="." method="_on_SelectBox_mouse_entered"]
[connection signal="mouse_exited" from="SelectBox" to="." method="_on_SelectBox_mouse_exited"]
